--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,32 @@
+ver 0.20.12 (2017/11/25)
+* database
+  - upnp: adapt to libupnp 1.8 API changes
+* input
+  - cdio_paranoia, ffmpeg, file, smbclient: reduce lock contention,
+    fixing lots of xrun problems
+  - curl: fix seeking
+* decoder
+  - ffmpeg: fix GCC 8 warning
+  - vorbis: fix Tremor support
+* player
+  - log message when decoder is too slow
+* encoder
+  - vorbis: default to quality 3
+* output
+  - fix hanging playback with soxr resampler
+  - httpd: flush encoder after tag; fixes corrupt Vorbis stream
+
+ver 0.20.11 (2017/10/18)
+* storage
+  - curl: support Content-Type application/xml
+* decoder
+  - ffmpeg: more reliable song duration
+  - gme: fix track numbering
+* improve random song order when switching songs manually
+* fix case insensitive search without libicu
+* fix Unicode file names in playlists on Windows
+* fix endless loop when accessing malformed file names in ZIP files
+
 ver 0.20.10 (2017/08/24)
 * decoder
   - ffmpeg: support MusicBrainz ID3v2 tags
